--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="10dp"
         tools:context=".MainActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
+    <ScrollView
+            android:id="@+id/scroll_view"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:scrollbars="vertical">
+        <TableLayout
+                android:id="@+id/table"
+                android:layout_alignParentTop="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            <TableRow>
+                <TextView
+                        android:id="@+id/title_link"
+                        android:layout_height="match_parent"
+                        android:layout_width="0dp"
+                        android:layout_weight="2"
+                        android:padding="10dp"
+                        android:text="Link"
+                        android:background="@drawable/header_cell"
+                        android:textStyle="bold"
+                        android:textAlignment="viewStart"
+                        android:textSize="20sp"/>
+                <TextView
+                        android:id="@+id/title_name"
+                        android:layout_height="match_parent"
+                        android:layout_width="0dp"
+                        android:layout_weight="3"
+                        android:padding="10dp"
+                        android:text="Name"
+                        android:background="@drawable/header_cell"
+                        android:textStyle="bold"
+                        android:textAlignment="viewStart"
+                        android:textSize="20sp"/>
+                <TextView
+                        android:id="@+id/title_button"
+                        android:layout_height="match_parent"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:padding="10dp"
+                        android:text="Dl"
+                        android:background="@drawable/header_cell"
+                        android:textStyle="bold"
+                        android:textAlignment="viewStart"
+                        android:textSize="20sp"/>
+            </TableRow>
+        </TableLayout>
+    </ScrollView>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
