Translate app in french

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
                         android:layout_width="0dp"
                         android:layout_weight="2"
                         android:padding="10dp"
-                        android:text="Link"
+                        android:text="@string/link"
                         android:background="@drawable/header_cell"
                         android:textStyle="bold"
                         android:textAlignment="viewStart"
@@ -36,7 +36,7 @@
                         android:layout_width="0dp"
                         android:layout_weight="3"
                         android:padding="10dp"
-                        android:text="Name"
+                        android:text="@string/link_name"
                         android:background="@drawable/header_cell"
                         android:textStyle="bold"
                         android:textAlignment="viewStart"
@@ -47,7 +47,7 @@
                         android:layout_width="0dp"
                         android:layout_weight="1"
                         android:padding="10dp"
-                        android:text="Dl"
+                        android:text=""
                         android:background="@drawable/header_cell"
                         android:textStyle="bold"
                         android:textAlignment="viewStart"
